--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "JKBit <jonaskaz2009@outlook.de>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "express": "^4.21.2"
   }
 }
